--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     }
   ],
   "devDependencies": {
-    "mocha": "~1.17.0",
-    "jshint": "2.3.0",
     "glob": "~3.2.8",
+    "jshint": "^2.10.2",
+    "mocha": "~1.17.0",
     "should": "~3.3.0"
   }
 }
