--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "IceMobile <support@icemobile.com>",
   "dependencies": {
     "js2xmlparser": "^0.1.9",
-    "lodash": "~2.4.1",
+    "lodash": "^4.17.15",
     "request": ">=2.9.0",
     "sax": ">=0.6",
     "strip-bom": "~0.3.1"
@@ -35,9 +35,9 @@
     }
   ],
   "devDependencies": {
-    "glob": "~3.2.8",
+    "glob": "^7.1.4",
     "jshint": "^2.10.2",
-    "mocha": "~1.17.0",
+    "mocha": "^6.2.0",
     "should": "~3.3.0"
   }
 }
